# canvas-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
canvas_cli/: auth.py  client.py  config.py  main.py  output.py  receipts.py  resolve.py  submissions_api.py  submit.py
tests/: conftest.py  test_client_post.py  test_receipts.py  test_submit_cli.py  test_submit_gates.py
tests/fixtures/: assignment_late.json  assignment_locked.json  assignment_submitted.json  assignment_text.json  assignment_upload.json  assignment_url.json
