[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-cli"
version = "0.1.0"
description = "A Python CLI for Canvas LMS — grades, assignments, course sync, and safe assignment submission."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Blake Mister" },
]
keywords = ["canvas", "canvas-lms", "cli", "education", "lms", "instructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/blakemister/canvas-cli"
Repository = "https://github.com/blakemister/canvas-cli"
Issues = "https://github.com/blakemister/canvas-cli/issues"
Changelog = "https://github.com/blakemister/canvas-cli/blob/main/CHANGELOG.md"

[project.scripts]
canvas = "canvas_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
